libtextstyle: Add accessor functions.
* libtextstyle/gnulib-local/lib/fd-ostream.oo.h (fd_ostream): New methods
get_descriptor, get_filename, is_buffered.
* libtextstyle/gnulib-local/lib/fd-ostream.oo.c (fd_ostream::get_descriptor,
fd_ostream::get_filename, fd_ostream::is_buffered): New functions.
* libtextstyle/gnulib-local/lib/file-ostream.oo.h (file_ostream): New method
get_stdio_stream.
* libtextstyle/gnulib-local/lib/file-ostream.oo.c
(file_ostream::get_stdio_stream): New function.
* libtextstyle/gnulib-local/lib/html-ostream.oo.h (html_ostream): New method
get_destination.
* libtextstyle/gnulib-local/lib/html-ostream.oo.c
(html_ostream::get_destination): New function.
* libtextstyle/gnulib-local/lib/html-styled-ostream.oo.h: Include
html-ostream.h.
(html_styled_ostream): New methods get_destination, get_html_destination,
get_css_filename.
* libtextstyle/gnulib-local/lib/html-styled-ostream.oo.c (html_styled_ostream):
Add field 'css_filename'.
(html_styled_ostream::free): Free it.
(html_styled_ostream_create): Initialize it.
(html_styled_ostream::get_destination,
html_styled_ostream::get_html_destination,
html_styled_ostream::get_css_filename): New functions.
* libtextstyle/gnulib-local/lib/iconv-ostream.oo.h (iconv_ostream): New methods
get_from_encoding, get_to_encoding, get_destination.
* libtextstyle/gnulib-local/lib/iconv-ostream.oo.c
(iconv_ostream::get_from_encoding, iconv_ostream::get_to_encoding,
iconv_ostream::get_destination): New functions.
* libtextstyle/gnulib-local/lib/noop-styled-ostream.oo.h (noop_styled_ostream):
New methods get_destination, is_owning_destination.
* libtextstyle/gnulib-local/lib/noop-styled-ostream.oo.c
(noop_styled_ostream::get_destination,
noop_styled_ostream::is_owning_destination): New functions.
* libtextstyle/gnulib-local/lib/term-ostream.oo.h (term_ostream): New methods
get_descriptor, get_filename, get_tty_control, get_effective_tty_control.
* libtextstyle/gnulib-local/lib/term-ostream.oo.c (term_ostream): Add field
't

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -11,6 +11,27 @@ New in 0.21.1:
   term_styled_ostream_t     is_instance_of_term_styled_ostream
   html_styled_ostream_t     is_instance_of_html_styled_ostream
   noop_styled_ostream_t     is_instance_of_noop_styled_ostream
+* Added accessor functions:
+       TYPE                             FUNCTION
+  file_ostream_t            file_ostream_get_stdio_stream
+  fd_ostream_t              fd_ostream_get_descriptor
+  fd_ostream_t              fd_ostream_get_filename
+  fd_ostream_t              fd_ostream_is_buffered
+  term_ostream_t            term_ostream_get_descriptor
+  term_ostream_t            term_ostream_get_filename
+  term_ostream_t            term_ostream_get_tty_control
+  term_ostream_t            term_ostream_get_effective_tty_control
+  iconv_ostream_t           iconv_ostream_get_from_encoding
+  iconv_ostream_t           iconv_ostream_get_to_encoding
+  iconv_ostream_t           iconv_ostream_get_destination
+  html_ostream_t            html_ostream_get_destination
+  term_styled_ostream_t     term_styled_ostream_get_destination
+  term_styled_ostream_t     term_styled_ostream_get_css_filename
+  html_styled_ostream_t     html_styled_ostream_get_destination
+  html_styled_ostream_t     html_styled_ostream_get_html_destination
+  html_styled_ostream_t     html_styled_ostream_get_css_filename
+  noop_styled_ostream_t     noop_styled_ostream_get_destination
+  noop_styled_ostream_t     noop_styled_ostream_is_owning_destination
 
 New in 0.21:
 * Added support for emitting hyperlinks.
