xgettext: Deprecate option '--sort-output'.
Suggested by Lauri Nurmi <lanurmi@iki.fi> in
<https://savannah.gnu.org/bugs/?61249>.

* gettext-tools/src/xgettext.c (main): Warn when option '--sort-output' is used.
(usage): Mark the option '--sort-output' deprecated.
* gettext-tools/doc/xgettext.texi: Likewise.
* NEWS: Mention it.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,9 @@ Version 0.21.1 - February 2022
 
 * The base Unicode standard is now updated to 14.0.0.
 
+* xgettext:
+  The xgettext option '--sorted-output' is now deprecated.
+
 * Portability:
   - Building on macOS 11/arm64 is now supported.
 
