Split autogen.sh into autopull.sh and autogen.sh.
* autopull.sh: New file, based on autogen.sh.
* autogen.sh: Remove code that was moved to autopull.sh. Remove --skip-gnulib
option.
* HACKING: Mention autopull.sh.
* libtextstyle/autopull.sh: New file, based on libtextstyle/autogen.sh.
* libtextstyle/autogen.sh: Remove code that was moved to
libtextstyle/autopull.sh. Remove --skip-gnulib option.
* libtextstyle/HACKING: Mention autopull.sh.
* libtextstyle/m4/init-package-version.m4: Update comment.

--- a/libtextstyle/HACKING
+++ b/libtextstyle/HACKING
@@ -93,8 +93,10 @@ Access to the git repository is described at
   https://savannah.gnu.org/git/?group=gettext
 
 After fetching the sources from the repository, go into the 'libtextstyle'
-directory, peek at the comments in autogen.sh, then run "./autogen.sh";
-then you can proceed with "./configure" as usual.
+directory, peek at the comments in autogen.sh, then run
+  ./autopull.sh
+  ./autogen.sh
+Then you can proceed with "./configure" as usual.
 
 
 Submitting patches
