--- a/gettext-runtime/NEWS
+++ b/gettext-runtime/NEWS
@@ -1,3 +1,10 @@
+Version 0.21.1 - October 2022
+
+* On AIX, locale names with a script or with an uppercase language are now
+  supported.
+  For example, sr_Cyrl_RS.UTF-8 is treated like sr_RS.UTF-8@cyrillic, and
+  EN_US.UTF-8 is treated like en_US.UTF-8.
+
 Version 0.21 - July 2020
 
 * On native Windows platforms, the directory that contains the message
