AM_GNU_GETTEXT: Define localedir_c and localedir_c_make.
* gettext-runtime/m4/gettext.m4 (AM_GNU_GETTEXT): Define and substitute
localedir_c and localedir_c_make.
* gettext-runtime/src/Makefile.am (AM_CPPFLAGS): Use $(localedir_c_make)
instead of $(localedir). This is useful in native Windows environments.
* gettext-runtime/intl/Makefile.am (AM_CPPFLAGS): Likewise.
* gettext-tools/src/Makefile.am (AM_CPPFLAGS): Likewise.
* gettext-tools/tests/Makefile.am (AM_CPPFLAGS): Likewise.
* gettext-tools/doc/gettext.texi (AM_GNU_GETTEXT): Small updates. Mention
localedir_c and localedir_c_make.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,15 @@
-Version 0.21.2 - January 2023
+Version 0.21.2 - February 2023
 
 * PO file format:
   - When a #: line contains references to file names that contain spaces,
     these file names are surrounded by Unicode characters U+2068 and U+2069.
     This makes it possible to parse such references correctly.
+
+* Improvements for maintainers:
+  - The AM_GNU_GETTEXT macro now defines two variables localedir_c and
+    localedir_c_make, that can be used in C code or in Makefiles,
+    respectively, for representing the value of the --localedir configure
+    option.
 
 * Programming languages support:
   - C, C++: xgettext now supports gettext-like functions that take wide strings
