--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -79,7 +79,7 @@ This file provides documentation for GNU @code{gettext} utilities.
 It also serves as a reference for the free Translation Project.
 
 @copying
-Copyright (C) 1995-1998, 2001-2020 Free Software Foundation, Inc.
+Copyright (C) 1995-1998, 2001-2023 Free Software Foundation, Inc.
 
 This manual is free documentation.  It is dually licensed under the
 GNU FDL and the GNU GPL.  This means that you can redistribute this
@@ -114,7 +114,7 @@ A copy of the license is included in @ref{GNU GPL}.
 @page
 @vskip 0pt plus 1filll
 @c @insertcopying
-Copyright (C) 1995-1998, 2001-2020 Free Software Foundation, Inc.
+Copyright (C) 1995-1998, 2001-2023 Free Software Foundation, Inc.
 
 This manual is free documentation.  It is dually licensed under the
 GNU FDL and the GNU GPL.  This means that you can redistribute this
@@ -8508,11 +8508,11 @@ more.  You can remove it.
 @cindex @file{aclocal.m4} file
 
 If you do not have an @file{aclocal.m4} file in your distribution,
-the simplest is to concatenate the files @file{gettext.m4},
-@file{host-cpu-c-abi.m4}, @file{intlmacosx.m4}, @file{iconv.m4},
-@file{lib-ld.m4}, @file{lib-link.m4}, @file{lib-prefix.m4}, @file{nls.m4},
-@file{po.m4}, @file{progtest.m4} from GNU @code{gettext}'s @file{m4/}
-directory into a single file.
+the simplest is to concatenate the files @file{build-to-host.m4},
+@file{gettext.m4}, @file{host-cpu-c-abi.m4}, @file{intlmacosx.m4},
+@file{iconv.m4}, @file{lib-ld.m4}, @file{lib-link.m4}, @file{lib-prefix.m4},
+@file{nls.m4}, @file{po.m4}, @file{progtest.m4} from GNU @code{gettext}'s
+@file{m4/} directory into a single file.
 
 If you already have an @file{aclocal.m4} file, then you will have
 to merge the said macro files into your @file{aclocal.m4}.  Note that if
@@ -8524,11 +8524,11 @@ Their contents may vary as we get more experience with strange systems
 out there.
 
 You should be using GNU @code{automake} 1.9 or newer.  With it, you need
-to copy the files @file{gettext.m4}, @file{host-cpu-c-abi.m4},
-@file{intlmacosx.m4}, @file{iconv.m4}, @file{lib-ld.m4}, @file{lib-link.m4},
-@file{lib-prefix.m4}, @file{nls.m4}, @file{po.m4}, @file{progtest.m4} from
-GNU @code{gettext}'s @file{m4/} directory to a subdirectory named @file{m4/}
-and add the line
+to copy the files @file{build-to-host.m4}, @file{gettext.m4},
+@file{host-cpu-c-abi.m4}, @file{intlmacosx.m4}, @file{iconv.m4},
+@file{lib-ld.m4}, @file{lib-link.m4}, @file{lib-prefix.m4}, @file{nls.m4},
+@file{po.m4}, @file{progtest.m4} from GNU @code{gettext}'s @file{m4/}
+directory to a subdirectory named @file{m4/} and add the line
 
 @example
 ACLOCAL_AMFLAGS = -I m4
